fix bug where certain repeating values overflow the display area

--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ body{
     text-align: end;
     margin: 0px;
     color: white;
+    word-wrap: break-word;
+    overflow: hidden;
 }
 
 .button {
